--- a/scss/moduls/_btn.scss
+++ b/scss/moduls/_btn.scss
@@ -4,8 +4,7 @@
   align-items: center;
   justify-content: center;
   background-color: var(--color-select);
-
-  color: var(--color-bg);
+  color: (var(--color-bg));
   padding: 42.5px 10px;
   border: 1px solid var(--color-select);
   outline: none;
@@ -17,6 +16,12 @@
   letter-spacing: -0.03em;
   text-transform: uppercase;
   transition: 0.3s;
+
+  &.color {
+    &:hover {
+      color: var(--color-text);
+    }
+  }
 
   &:hover {
     background-color: rgba(0, 0, 0, 0);
@@ -31,6 +36,13 @@
     line-height: 60%;
     display: inline-block;
     transform: translateY(-3px);
+  }
+
+  &__text {
+    margin-top: 16px;
+    text-align: center;
+    font-size: 16px;
+    line-height: 19px;
   }
 }
 
