--- a/scss/moduls/_btn-block.scss
+++ b/scss/moduls/_btn-block.scss
@@ -59,9 +59,9 @@
 
 @media (max-width: 768px) {
   .btn-block {
-    margin-bottom: 70px;
+    margin-bottom: 50px;
     &__wrapper {
-      padding: 15px;
+      padding: 50px 15px;
       flex-direction: column-reverse;
     }
     &__btn {
@@ -69,7 +69,7 @@
     }
     &__text {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
   }
 }
