--- a/scss/moduls/_grid-3.scss
+++ b/scss/moduls/_grid-3.scss
@@ -47,5 +47,16 @@
     &__wrapper {
       grid-template-columns: repeat(1, 1fr);
     }
+    &__block {
+      &:nth-child(3) {
+        order: 1;
+      }
+      &:nth-child(1) {
+        order: 2;
+      }
+      &:nth-child(2) {
+        order: 3;
+      }
+    }
   }
 }
