--- a/scss/sections/_brand.scss
+++ b/scss/sections/_brand.scss
@@ -66,7 +66,11 @@
 
 @media (max-width: 768px) {
   .brand {
-    margin: 70px 0;
+    margin: 50px 0;
+
+    .title-section {
+      text-align: center;
+    }
   }
 }
 
