--- a/scss/sections/_description.scss
+++ b/scss/sections/_description.scss
@@ -28,14 +28,18 @@
   &__items {
     border: 1px solid #262427;
     border-radius: 50px;
+
+    overflow: hidden;
+    background-color: var(--color-text);
+    margin-bottom: 50px;
+  }
+
+  .swiper-wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
     grid-column-gap: 1px;
     grid-row-gap: 1px;
-    overflow: hidden;
-    background-color: var(--color-text);
-    margin-bottom: 50px;
   }
 
   &__item {
@@ -160,12 +164,23 @@
 @media (max-width: 1000px) {
   .description {
     &__items {
-      grid-template-columns: repeat(1, 1fr);
-      max-width: 550px;
-      margin: 0 auto 50px;
+      border: 0;
+      display: flex;
+      background-color: rgba(0, 0, 0, 0);
+      border-radius: 0;
+      width: auto;
+      margin: 0 -30px 50px;
+    }
+    .swiper-wrapper {
+      display: flex;
+      grid-column-gap: 0px;
+      grid-row-gap: 0px;
     }
     &__item {
       min-height: auto;
+      height: auto;
+      border: 1px solid var(--color-text);
+      border-radius: 50px;
     }
     &__item-title {
       font-size: 30px;
@@ -187,6 +202,9 @@
 
 @media (max-width: 768px) {
   .description {
+    &__items {
+      margin: 0 -15px 50px;
+    }
     &__price-num {
       font-size: 50px;
     }
