--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -169,19 +169,19 @@
 @media (max-width: 768px) {
   .header {
     &__wrapper {
-      padding: 50px 15px;
+      padding: 30px 35px 35px;
     }
     &__title-block {
       flex-direction: column-reverse;
       text-align: center;
-      margin: 0 auto 50px;
+      margin: 0 auto 53px;
       max-width: fit-content;
       .header__text {
         margin: 0 auto 20px;
       }
     }
     &__title {
-      font-size: 80px;
+      font-size: 64px;
       margin: 0;
       .translate {
         &-1 {
@@ -197,32 +197,43 @@
     }
     &__text {
       text-align: center;
+      font-size: 16px;
       margin: 0 auto;
+      margin-bottom: 29px;
+      &.tmpl {
+        font-size: 18px;
+        text-align: left;
+        margin-bottom: 0px;
+      }
     }
     &__content {
-      margin-bottom: 50px;
+      margin-bottom: 19px;
       flex-direction: column;
+      &.revers {
+        flex-direction: column-reverse;
+      }
     }
     &__btn {
-      margin-bottom: 20px;
+      margin-bottom: 0px;
     }
     &__desc {
+      width: 100%;
       font-size: 18px;
-      max-width: 100%;
-      text-align: center;
+      max-width: 420px;
+      margin-bottom: 53px;
     }
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .header {
     &__title {
-      font-size: 60px;
+      font-size: 64px;
     }
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
   .header {
     &__title {
       font-size: 50px;
